[package]
name = "retrolang-math"
edition = "2018"
version = "0.1.0"
authors = ["Gregory <gregory.mkv@gmail.com>", "Alex Jokela"]
description = "Mathematical expression parser and evaluator for RetroLang (based on asciimath by chmln)"
keywords = ["math", "expression", "evaluation", "parser"]
license = "MIT"
documentation = "https://docs.rs/retrolang-math"
homepage = "https://github.com/ajokela/retrolang-math"
repository = "https://github.com/ajokela/retrolang-math"
readme = "README.md"
categories = ["science", "parsing"]

[lib]
name = "asciimath"
path = "./src/lib.rs"

[profile.release]
lto = true
opt-level = 3
debug = false
debug-assertions = false

[dependencies]
once_cell = { version = "1.2.0", default-features = false, features = ["std"] }
